Big fixes to everything - mobile friendly

--- a/SEGREGATED/index.html
+++ b/SEGREGATED/index.html
@@ -22,10 +22,10 @@
 
 <body>
 
-<nav class="navbar navbar-inverse navbar-fixed-top navbar-default">
+<nav class="navbar navbar-inverse navbar-default">
 		<div class="container-fluid"> <!--Apparently this isn't a requirement, it can just be a standard container-->
 		<div class="navbar-header">
-		    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+		    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
 			    <span class="sr-only">Toggle navigation</span>
 			    <span class="icon-bar"></span>
 			    <span class="icon-bar"></span>
@@ -85,34 +85,7 @@
 </nav>
 
 
-<!-- <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
-        </div>
-     </div>
-    </nav>-->
-
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="jumbotron">
+<div class="jumbotron home-jumbotron">
   <div class="container">
     <h1>AMUNC 2016</h1>
     <h2>BRISBANE, AUSTRALIA</h2>
@@ -135,7 +108,7 @@
   <div class="row">
     <div class="col-md-4">
  		<div class="thumbnail">
- 		<img src="../images/thumb1.jpg" alt="..."><
+ 		<div class="thumbnail-image thumbnail-image-1"></div>
   		<div class="caption">
       		<h4>STREAMLINED SOFTWARE</h4>
       		<p>It might not be MUNRun!</p>
@@ -143,8 +116,8 @@
       	</div>
   	</div>
     <div class="col-md-4">
- 		<div class="thumbnail">
- 		<img src="../images/thumb2.jpg" alt="...">
+ 		<div class="thumbnail"> 		
+ 		<div class="thumbnail-image thumbnail-image-2"></div>
   		<div class="caption">
       		<h4>STREAMLINED SOFTWARE</h4>
       		<p>It might not be MUNRun!</p>
@@ -153,7 +126,7 @@
   	</div>
    <div class="col-md-4">
  		<div class="thumbnail">
- 		<img src="../images/thumb3.jpg" alt="...">
+ 		<div class="thumbnail-image thumbnail-image-3"></div>
   		<div class="caption">
       		<h4>STREAMLINED SOFTWARE</h4>
       		<p>It might not be MUNRun!</p>
