Just tiny changes
Trying to figure out the problem with the html

--- a/SEGREGATED/index.html
+++ b/SEGREGATED/index.html
@@ -4,17 +4,17 @@
 	<!--Max Bo 2015-->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>AMUNC 2016</title>
 	<!--Bootstrap and reset CSS-->
 	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<!--website css-->
 	<link rel="stylesheet" href="css/style.css">
 	<!--Montserrat Google Font-->
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/site.js"></script>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
@@ -23,7 +23,7 @@
 <body>
 
 <nav class="navbar navbar-inverse navbar-default">
-		<div class="container-fluid"> <!--Apparently this isn't a requirement, it can just be a standard container-->
+		<div class="container"> <!--Apparently this isn't a requirement, it can just be a standard container-->
 		<div class="navbar-header">
 		    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
 			    <span class="sr-only">Toggle navigation</span>
