I MOTHERFUCKING FIXED IT

--- a/SEGREGATED/index.html
+++ b/SEGREGATED/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!--Max Bo 2015-->
+	<!--Hugo Kawamata 2015-->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,71 +18,69 @@
 	<script type="text/javascript" src="js/site.js"></script>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
-
-
 <body>
+<div id="site-wrapper">
+	<div class="navbar navbar-inverse navbar-default navbar-static-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+			    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+				    <span class="sr-only">Toggle navigation</span>
+				    <span class="icon-bar"></span>
+				    <span class="icon-bar"></span>
+				    <span class="icon-bar"></span>
+			    </button>
+		    	<a class="navbar-brand" href="index.html"><span>AMUNC 2016</span><span class="logo-container"><img class="navbar-logo" src="images/amunclogo.png"></span></a>
+			</div>
+		    <div id="navbar" class="collapse navbar-collapse" aria-expanded="false">
+		    	<ul class="nav navbar-nav navbar-right">
+		    		<li class="dropdown">
+	         		 	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ABOUT <b class="caret"></b></a>
+	          			<ul class="dropdown-menu">
+		            		<li><a href="about.html#mun">Model UN</a></li>
+		            		<li><a href="about.html#amunc">AMUNC</a></li>
+		            		<li><a href="about.html#brisbane">Brisbane</a></li>
+			         		<li><a href="about.html#venue">The Venue</a></li>
+		            		<li><a href="sponsors.html">Our Sponsors</a></li>
+		            		<li><a href="blog.html">Blog</a></li>
+	          			</ul>
+	    			</li>
+	    			<li class="dropdown">
+	      				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">EVENTS <b class="caret"></b></a>
+	      				<ul class="dropdown-menu">
+	      					<li><a href="events.html#programme">Programme</a></li>
+							<li><a href="events.html#speakers">Speakers</a></li>
+							<li><a href="events.html#socials">Socials</a></li>
+						</ul>
+					</li>
+					<li class="dropdown">
+	      				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">MUN <b class="caret"></b></a>
+	      				<ul class="dropdown-menu">
+							<li><a href="mun.html#committees">Committees </a></li>
+							<li><a href="mun.html#training">Training Materials</a></li>
+							<li><a href="mun.html#position">Position Statements</a></li>
+							<li><a href="mun.html#rules">Rules of Procedure</a></li>
+							<li><a href="mun.html#judging">Judging Criteria</a></li>
+						</ul>
+					</li>
+	  				<li class="dropdown">
+	      				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">DELEGATES <b class="caret"></b></a>
+	      				<ul class="dropdown-menu">
+							<li><a href="delegates.html#visas">Visas</a></li>
+							<li><a href="delegates.html#flights">Flights to Brisbane</a></li>
+							<li><a href="delegates.html#accommodation">Accommodation</a></li>
+							<li><a href="faq.html">FAQ</a></li>
+							<li><a href="code_of_conduct.html">Code of Conduct</a></li>
+							<li><a href="contact.html">Contact</a></li>
+						</ul>
+					</li>
+					<li class="register">
+						<a href="register.html">REGISTER</a>
+					</li>
 
-<nav class="navbar navbar-inverse navbar-default">
-		<div class="container"> <!--Apparently this isn't a requirement, it can just be a standard container-->
-		<div class="navbar-header">
-		    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
-			    <span class="sr-only">Toggle navigation</span>
-			    <span class="icon-bar"></span>
-			    <span class="icon-bar"></span>
-			    <span class="icon-bar"></span>
-		    </button>
-	    	<a class="navbar-brand" href="index.html"><span>AMUNC 2016</span><span class="logo-container"><img class="navbar-logo" src="images/amunclogo.png"></span></a>
+				</ul>
+			</div>
 		</div>
-	    <div class="collapse navbar-collapse" id="navbar">
-	    	<ul class="nav navbar-nav navbar-right">
-	    		<li class="dropdown">
-         		 	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ABOUT</a>
-          			<ul class="dropdown-menu">
-	            		<li><a href="about.html#mun">Model UN</a></li>
-	            		<li><a href="about.html#amunc">AMUNC</a></li>
-	            		<li><a href="about.html#brisbane">Brisbane</a></li>
-		         		<li><a href="about.html#venue">The Venue</a></li>
-	            		<li><a href="sponsors.html">Our Sponsors</a></li>
-	            		<li><a href="blog.html">Blog</a></li>
-          			</ul>
-    			</li>
-    			<li class="dropdown">
-      				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">EVENTS</a>
-      				<ul class="dropdown-menu">
-      					<li><a href="events.html#programme">Programme</a></li>
-						<li><a href="events.html#speakers">Speakers</a></li>
-						<li><a href="events.html#socials">Socials</a></li>
-					</ul>
-				</li>
-				<li class="dropdown">
-      				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">MUN</a>
-      				<ul class="dropdown-menu">
-						<li><a href="mun.html#committees">Committees </a></li>
-						<li><a href="mun.html#training">Training Materials</a></li>
-						<li><a href="mun.html#position">Position Statements</a></li>
-						<li><a href="mun.html#rules">Rules of Procedure</a></li>
-						<li><a href="mun.html#judging">Judging Criteria</a></li>
-					</ul>
-				</li>
-  				<li class="dropdown">
-      				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">DELEGATES</a>
-      				<ul class="dropdown-menu">
-						<li><a href="delegates.html#visas">Visas</a></li>
-						<li><a href="delegates.html#flights">Flights to Brisbane</a></li>
-						<li><a href="delegates.html#accommodation">Accommodation</a></li>
-						<li><a href="faq.html">FAQ</a></li>
-						<li><a href="code_of_conduct.html">Code of Conduct</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
-				</li>
-				<li class="register">
-					<a href="register.html">REGISTER</a>
-				</li>
-
-			</ul>
-		</div>
-	</div>    
-</nav>
+	</div>
 
 
 <div class="jumbotron home-jumbotron">
@@ -103,40 +101,40 @@
 </div>
 
 
-<div class="container">
-  <!-- Example row of columns --> 
-  <div class="row">
-    <div class="col-md-4">
- 		<div class="thumbnail">
- 		<div class="thumbnail-image thumbnail-image-1"></div>
-  		<div class="caption">
-      		<h4>STREAMLINED SOFTWARE</h4>
-      		<p>It might not be MUNRun!</p>
-      	</div>
-      	</div>
-  	</div>
-    <div class="col-md-4">
- 		<div class="thumbnail"> 		
- 		<div class="thumbnail-image thumbnail-image-2"></div>
-  		<div class="caption">
-      		<h4>STREAMLINED SOFTWARE</h4>
-      		<p>It might not be MUNRun!</p>
-      	</div>
-      	</div>
-  	</div>
-   <div class="col-md-4">
- 		<div class="thumbnail">
- 		<div class="thumbnail-image thumbnail-image-3"></div>
-  		<div class="caption">
-      		<h4>STREAMLINED SOFTWARE</h4>
-      		<p>It might not be MUNRun!</p>
-      	</div>
-      	</div>
-  	</div>
-  </div>
+	<div class="container">
+	  <!-- Example row of columns-->
+	  <div class="row">
+	    <div class="col-md-4">
+	 		<div class="thumbnail">
+	 		<div class="thumbnail-image thumbnail-image-1"></div>
+	  		<div class="caption">
+	      		<h4>STREAMLINED SOFTWARE</h4>
+	      		<p>It might not be MUNRun!</p>
+	      	</div>
+	      	</div>
+	  	</div>
+	    <div class="col-md-4">
+	 		<div class="thumbnail"> 		
+	 		<div class="thumbnail-image thumbnail-image-2"></div>
+	  		<div class="caption">
+	      		<h4>STREAMLINED SOFTWARE</h4>
+	      		<p>It might not be MUNRun!</p>
+	      	</div>
+	      	</div>
+	  	</div>
+	   <div class="col-md-4">
+	 		<div class="thumbnail">
+	 		<div class="thumbnail-image thumbnail-image-3"></div>
+	  		<div class="caption">
+	      		<h4>STREAMLINED SOFTWARE</h4>
+	      		<p>It might not be MUNRun!</p>
+	      	</div>
+	      	</div>
+	  	</div>
+	  </div>
+	</div>
 </div>
-
-      <div id="footer">
+    <div id="footer">
 		<div class="aux-nav">
 			<span><a href="index.html#aboutamunc">ABOUT</a></span>
 			<span><a href="blog.html">BLOG</a></span>
@@ -155,9 +153,7 @@
 	</div>
 </div>
     
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  
     <script src="bootstrap-3.3.5-dist/js/ie10-viewport-bug-workaround.js"></script>
 </body>
 </html>
